adding a blockquote and table update

--- a/index.html
+++ b/index.html
@@ -25,30 +25,33 @@
         <thead>
           <tr>
               <th data-field="id">Name</th>
-              <th data-field="name">Item Name</th>
+              <th data-field="name">Wish List</th>
               <th data-field="price">Item Price</th>
           </tr>
         </thead>
 
         <tbody>
           <tr>
-            <td>Alvin</td>
-            <td>Eclair</td>
-            <td>$0.87</td>
+            <td>Lauren</td>
+            <td>The Moon</td>
+            <td>$1Mil.</td>
           </tr>
           <tr>
-            <td>Alan</td>
-            <td>Jellybean</td>
-            <td>$3.76</td>
+            <td>Nick</td>
+            <td>Mars</td>
+            <td>$2Mil.</td>
           </tr>
           <tr>
-            <td>Jonathan</td>
-            <td>Lollipop</td>
-            <td>$7.00</td>
+            <td>React</td>
+            <td>The World</td>
+            <td>$54Mil.</td>
           </tr>
         </tbody>
       </table>
-		
+	<br><br>
+	<blockquote class="container">
+		        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+	</blockquote>	
 	<script src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>      
 	<script src="app.js"></script>
