more materialize fun

--- a/index.html
+++ b/index.html
@@ -6,21 +6,33 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 	</head>
 	<body>
-	<div class="row purple lighten-2 valign-wrapper z-depth-4">
-      <div class="col s1"><p class="center-align">Column number one</p></div>
+	<div class="row teal lighten-3 valign-wrapper z-depth-4">
+      <div class="col s1"><p class="center-align">Header</p></div>
       <div class="col s1"><p class="center-align truncate">Column number two</p></div>
-      <div class="col s1"><p class="center-align">3</p></div>
-      <div class="col s1"><p class="center-align">4</p></div>
-      <div class="col s1"><p class="center-align">5</p></div>
-      <div class="col s1"><p class="center-align">6</p></div>
-      <div class="col s1"><p class="center-align">7</p></div>
-      <div class="col s1"><p class="center-align">8</p></div>
-      <div class="col s1"><p class="center-align">9</p></div>
-      <div class="col s1"><p class="center-align">10</p></div>
-      <div class="col s1"><p class="center-align">11</p></div>
-      <div class="col s1"><p class="center-align">12</p></div>
+      <div class="col s10"><h4 class="right">CodingLotus</h4></div>
     </div>
 
+
+    <div class="container col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="https://scontent-sea1-1.xx.fbcdn.net/t31.0-8/905701_10156320595710226_372321316022848421_o.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <blockquote class="container block">
+		        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+	</blockquote>
+	<br><br>
+      
     <table class="container responsive-table centered bordered z-depth-3">
         <thead>
           <tr>
@@ -49,9 +61,39 @@
         </tbody>
       </table>
 	<br><br>
-	<blockquote class="container">
-		        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Sed posuere consectetur est at lobortis. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-	</blockquote>	
+
+	
+
+	
+
+
+
+	<footer class="page-footer teal lighten-4">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="grey-text grey-text text-darken-3">Footer Content</h5>
+                <p class="grey-text text-darken-3">
+                Nullam id dolor id nibh ultricies vehicula ut id elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="grey-text text-darken-4">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-darken-3" href="#!">Home</a></li>
+                  <li><a class="grey-text text-darken-3" href="#!">About</a></li>
+                  <li><a class="grey-text text-darken-3" href="#!">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container grey-text text-darken-3">
+            © 2016 Coding Lotus
+            <a class="grey-text text-darken-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+
 	<script src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>      
 	<script src="app.js"></script>
