--- a/index.html
+++ b/index.html
@@ -62,8 +62,21 @@
       </table>
 	<br><br>
 
-	
-
+	<div class="container ">
+		<div class="card col l4">
+    		<div class="card-image waves-effect waves-block waves-light">
+      			<img class="activator" src="https://www.nobledesktop.com/image/sem-graphic/coding-for-designers-500.gif">
+    		</div>
+    	<div class="card-content">
+      		<span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      		<p><a href="#">This is a link</a></p>
+    	</div>
+    	<div class="card-reveal">
+      		<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      		<p>Here is some more information about this product that is only revealed once clicked on.</p>
+    	</div>
+  		</div>
+  </div>
 	
 
 
@@ -76,7 +89,7 @@
                 <p class="grey-text text-darken-3">
                 Nullam id dolor id nibh ultricies vehicula ut id elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla.</p>
               </div>
-              <div class="col l4 offset-l2 s12">
+              <div class="col l3 offset-l3 s12">
                 <h5 class="grey-text text-darken-4">Links</h5>
                 <ul>
                   <li><a class="grey-text text-darken-3" href="#!">Home</a></li>
